# projeto_crud

./: README.md  api_pokemon.py  docker-compose.yml  pyproject.toml
src/: controler.py  db.py  main.py  models.py  pokemon.db  schema.py
