[project]
name = "projeto-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael",email = "michael.mjpr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
